Add max-width class

--- a/index.html
+++ b/index.html
@@ -8,91 +8,83 @@
   </head>
   <body>
   <header id="page-header">
-      <h1><a href="index.html">JACKY-ON-THE-SPOT!</a></h1>
-      <h2>Emergency bathroom cleaning specialists</h2>
-      <div class="subH2"><h5><span id="emergency">Emergency</span> bathroom cleaning specialists</h5></div>
-      <nav>
-        <a href="#" id="hamburger"><img src="images/threelines.png"></a>
-
-        <div id="innernav">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="howItWorks.html">How It Works</a>
-          <a href="rates.html">Rates</a>
-        </div>
-
-      </nav>
-
+      <div class="container">
+          <h1><a href="index.html">JACKY-ON-THE-SPOT!</a></h1>
+          <h2>Emergency bathroom cleaning specialists</h2>
+          <div class="subH2"><h5><span id="emergency">Emergency</span> bathroom cleaning specialists</h5></div>
+          <nav>
+              <a href="#" id="hamburger"><img src="images/threelines.png"></a>
+              <div id="innernav">
+                  <a href="index.html">Home</a>
+                  <a href="about.html">About</a>
+                  <a href="howItWorks.html">How It Works</a>
+                  <a href="rates.html">Rates</a>
+              </div>
+          </nav>
+      </div>
   </header>
-
   <p class="tagline">Because the <span id="only">only</span> pot a Barrista should be cleaning is a coffee pot....</p>
- <section class="banner">
-    <div class="blurb">
-    <h2>Jacky, Please....</h2>
-      <a class="button" href="#">CLEAN MY BATHROOM NOW!</a>
-      <h2>Your Company Policy:</h2>
-      <h4><ul> Provide clean public toilets</ul></h4>
-      <h2>Your Problem:</h2>
-      <ul><h4>
-        <li>Keeping Barristas happy</li>
-        <li>Servicing your clientele with sanitary bathrooms</li>
-        <li>Bio-haz risks</li>
-      </h4></ul>
-    </div>
-  </section>
+
+    <section class="banner">
+        <div class="container">
+            <div class="blurb">
+                <h2>Jacky, Please....</h2>
+                <a class="button" href="#">CLEAN MY BATHROOM NOW!</a>
+                <h2>Your Company Policy:</h2>
+                <h4><ul> Provide clean public toilets</ul></h4>
+                <h2>Your Problem:</h2>
+                <ul><h4>
+                    <li>Keeping Barristas happy</li>
+                    <li>Servicing your clientele with sanitary bathrooms</li>
+                    <li>Bio-haz risks</li>
+                </h4></ul>
+            </div>
+        </div>
+    </section>
 
   <section class="callouts">
-    <div class="callout you">
-      <h3>You Are</h3>
-      <p>A high-end coffee shop, a deli, or a 24 hour medical unit.  Any  business serving food/drink in high volume that provides bathroom  facilities for their customers and the public.</p>
-    </div>
+      <div class="container">
+          <div class="callout you">
+              <h3>You Are</h3>
+              <p>A high-end coffee shop, a deli, or a 24 hour medical unit.  Any  business serving food/drink in high volume that provides bathroom  facilities for their customers and the public.</p>
+          </div>
 
-    <div class="callout we">
-      <h3>We Are</h3>      
-      <p>An environmental service company that handles hazardous waste and bio-hazardous waste.  We specialize in the cleaning of bathrooms and are capable of sanitizing the worst mess possible.</p>
-    </div>
+          <div class="callout we">
+              <h3>We Are</h3>
+              <p>An environmental service company that handles hazardous waste and bio-hazardous waste.  We specialize in the cleaning of bathrooms and are capable of sanitizing the worst mess possible.</p>
+          </div>
 
-    <div class="callout rate">
-      <h3>Rate: $400</h3>
-      <p>This <span class="merg">EMERGENCY</span> Rate applies in Manhattan only.  Includes full turn-key cleaning, and freshening up of your bathroom.  Money back guarantee if not satisfied.  We dispose of the waste we generate in accordance with all environmental laws and regulations</p>
-    </div>
+          <div class="callout rate">
+              <h3>Rate: $400</h3>
+              <p>This <span class="merg">EMERGENCY</span> Rate applies in Manhattan only.  Includes full turn-key cleaning, and freshening up of your bathroom.  Money back guarantee if not satisfied.  We dispose of the waste we generate in accordance with all environmental laws and regulations</p>
+          </div>
+      </div>
   </section>
 
 
   <div class="fixtoilet">
-      <h4>Classes on a simple toilet repair:</h4>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/tLlgmWtrysI" frameborder="0" allowfullscreen></iframe>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/IR34TVD_ihI" frameborder="0" allowfullscreen></iframe>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/dST-bRCjVsw" frameborder="0" allowfullscreen></iframe>
-<!--      <input type="button" id="toiletRepairVideo" value="PLAY" src=""https://www.youtube.com/watch?v=tLlgmWtrysI&feature=youtu.be">
--->
-      <audio id="audio" src="images/Toilet_Flushing-KevanGC-917782919.mp3"></audio>
+      <div class="container">
+          <h4>Classes on a simple toilet repair:</h4>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/tLlgmWtrysI" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/IR34TVD_ihI" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/dST-bRCjVsw" frameborder="0" allowfullscreen></iframe>
+          <!-- <input type="button" id="toiletRepairVideo" value="PLAY" src=""https://www.youtube.com/watch?v=tLlgmWtrysI&feature=youtu.be"> -->
+          <audio id="audio" src="images/Toilet_Flushing-KevanGC-917782919.mp3"></audio>
+      </div>
   </div>
 
 
   <footer>
-    &copy; 2016 Jacky-On-The-Spot! N.Y.C.      
-    <h4>"Happy being #3 in the #1 & #2 business"</h4>
+      <div class="container">
+          &copy; 2016 Jacky-On-The-Spot! N.Y.C.
+          <h4>"Happy being #3 in the #1 & #2 business"</h4>
+      </div>
   </footer>
 <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
   <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
   <script type="text/javascript" src="js/project.js"></script>
 
 <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.color-animation/1/mainfile"></script>
-  
+
   </body>
   </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
