hide tagline on mobile size

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="blurb">
                 <h2>Jacky, Please....</h2>
-                <a class="button" href="#">CLEAN MY BATHROOM NOW!</a>
+                <a class="button" href="https://goo.gl/forms/KSrYPoeBm2Sz7tgs2" target="_blank">CLEAN MY BATHROOM NOW!</a>
                 <h2>Your Company Policy:</h2>
                 <h4><ul> Provide clean public toilets</ul></h4>
                 <h2>Your Problem:</h2>
@@ -54,7 +54,7 @@
 
           <div class="callout rate">
               <h3>Rate: $400</h3>
-              <p>This <span class="merg">EMERGENCY</span> Rate applies in Manhattan only.  Includes full turn-key cleaning, and freshening up of your bathroom.  Money back guarantee if not satisfied.  We dispose of the waste we generate in accordance with all environmental laws and regulations</p>
+              <p>This <span class="emergency-text">EMERGENCY</span> Rate applies in Manhattan only.  Includes full turn-key cleaning, and freshening up of your bathroom.  Money back guarantee if not satisfied.  We dispose of the waste we generate in accordance with all environmental laws and regulations</p>
           </div>
       </div>
   </section>
