--- a/rates.html
+++ b/rates.html
@@ -7,39 +7,39 @@
     <link rel="stylesheet" type="text/css" href="css/project.css">
 </head>
 <body>
- <header id="page-header">
-      <h1><a href="index.html">JACKY-ON-THE-SPOT!</a></h1>
-      <div>
-          <h2>Emergency bathroom cleaning specialists</h2>
-      </div>
-      <nav>
-        <a href="#" id="hamburger"><img src="images/threelines.png"></a>
-        <div id="innernav">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="howItWorks.html">How It Works</a>
-          <a href="rates.html">Rates</a>
+    <header id="page-header">
+        <div class="container">
+            <h1><a href="index.html">JACKY-ON-THE-SPOT!</a></h1>
+            <h2>Emergency bathroom cleaning specialists</h2>
+            <div class="subH2"><h5><span id="emergency">Emergency</span> bathroom cleaning specialists</h5></div>
+            <nav>
+                <a href="#" id="hamburger"><img src="images/threelines.png"></a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="howItWorks.html">How It Works</a>
+                <a href="rates.html">Rates</a>
+            </nav>
         </div>
-      </nav>
-  </header>
+    </header>
 
-	<p>$400 -Emergency Rates to attend an immediate bathroom treatment or cleaning.  "Jacky's" can handle many, but not all repairs. We use non-toxic cleaners, and dispose of all the waste we create.</p>
+    <section class="container">
+        <p>$400 -Emergency Rates to attend an immediate bathroom treatment or cleaning.  "Jacky's" can handle many, but not all repairs. We use non-toxic cleaners, and dispose of all the waste we create.</p>
 
-	<p>For non-emergency rates, "Jacky's" estimates cleaning using the square footage of the room, location of business, time of day, and frequency of job.To estimate cleaning in a scheduled maintenance agreement, contact our office for an appointment and we will stop by for a look-see.</p>
+        <p>For non-emergency rates, "Jacky's" estimates cleaning using the square footage of the room, location of business, time of day, and frequency of job.To estimate cleaning in a scheduled maintenance agreement, contact our office for an appointment and we will stop by for a look-see.</p>
 
-	<h3>How big is bathroom to be cleaned?</h3>
+        <h3>How big is bathroom to be cleaned?</h3>
 
-	<input id="footLength" placeholder="width in feet"> x
-	            	<input id="footWidth" placeholder="length in feet"> =
-	            	<button id="clickme">Calculate Square Horizontal Footage</button>
-				<h5>Your calculate Square Footage for horizonal bathroom surface is <span id="sqFootage">___</span> sq. ft.</h5>
+        <input id="footLength" placeholder="width in feet"> x
+        <input id="footWidth" placeholder="length in feet"> =
+        <button id="clickme">Calculate Square Horizontal Footage</button>
+        <h5>Your calculate Square Footage for horizonal bathroom surface is <span id="sqFootage">___</span> sq. ft.</h5>        
+    </section>
 
-	
   <footer>
-    &copy; 2016 Jacky-On-The-Spot! N.Y.C.      
+    &copy; 2016 Jacky-On-The-Spot! N.Y.C.
     <h4>"Happy being #3 in the #1 & #2 business"</h4>
   </footer>
-  
+
   <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
   <script type="text/javascript" src="js/project.js"></script>
 
