cleaning stuff up

--- a/howItWorks.html
+++ b/howItWorks.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>How It Works</title>
-	 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic" rel="stylesheet" type="text/css">
+  <head>
+    <title>Jacky-On-The-Spot</title>
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/project.css">
-</head>
-<body>
-<header id="page-header">
-      <h1><a href="index.html">JACKY-ON-THE-SPOT!</a></h1>
-      <div>
+  </head>
+  <body>
+  <header id="page-header">
+      <div class="container">
+          <h1><a href="index.html">JACKY-ON-THE-SPOT!</a></h1>
           <h2>Emergency bathroom cleaning specialists</h2>
+          <div class="subH2"><h5><span id="emergency">Emergency</span> bathroom cleaning specialists</h5></div>
+          <nav>
+              <a href="#" id="hamburger"><img src="images/threelines.png"></a>
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="howItWorks.html">How It Works</a>
+              <a href="rates.html">Rates</a>
+          </nav>
       </div>
-      <nav>
-        <a href="#" id="hamburger"><img src="images/threelines.png"></a>
-        <div id="innernav">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="howItWorks.html">How It Works</a>
-          <a href="rates.html">Rates</a>
-        </div>
-      </nav>
   </header>
-  <div>
-  <p>You have a hygiene issue with your bathroom, you contact Jacky, and we will give you an ETA on our arrival.  Our company truck will arrive, with uniformed professional employees, carrying proper credentials.  You are welcome to call the office and confirm our employees.</p>
-  <p> We bring our own cleaning supplies and insure your customers are not impacted by our cleaning. We will identify what needs to be done. If there are necessary repairs and we can not fix something, at least we will make it clean enough for a professional plumber to work upon.</p>
-  <p>You will pay for our service up front through Paypal, Check, Cash, or Credit Card.</p>
-   </div>
-<footer>
-    &copy; 2016 Jacky-On-The-Spot! N.Y.C.      
-    <h4>"Happy being #3 in the #1 & #2 business"</h4>
-  </footer>
-  
-  <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
-  <script type="text/javascript" src="js/project.js"></script>
-  
-</body>
-</html>
 
+    <section class="container">
+        <p>You have a hygiene issue with your bathroom, you contact Jacky, and we will give you an ETA on our arrival.  Our company truck will arrive, with uniformed professional employees, carrying proper credentials.  You are welcome to call the office and confirm our employees.</p>
+        <p> We bring our own cleaning supplies and insure your customers are not impacted by our cleaning. We will identify what needs to be done. If there are necessary repairs and we can not fix something, at least we will make it clean enough for a professional plumber to work upon.</p>
+        <p>You will pay for our service up front through Paypal, Check, Cash, or Credit Card.</p>
+    </section>
+
+   <footer>
+       <div class="container">
+           &copy; 2016 Jacky-On-The-Spot! N.Y.C.
+           <h4>"Happy being #3 in the #1 & #2 business"</h4>
+       </div>
+   </footer>
+   <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+   <script type="text/javascript" src="js/project.js"></script>
+ </body>
+ </html>
