--- a/about.html
+++ b/about.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>About</title>
-	 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic" rel="stylesheet" type="text/css">
+  <head>
+    <title>Jacky-On-The-Spot</title>
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/project.css">
-</head>
-<body>
-<header id="page-header">
-      <h1><a href="index.html">JACKY-ON-THE-SPOT!</a></h1>
-      <div>
+  </head>
+  <body>
+  <header id="page-header">
+      <div class="container">
+          <h1><a href="index.html">JACKY-ON-THE-SPOT!</a></h1>
           <h2>Emergency bathroom cleaning specialists</h2>
+          <div class="subH2"><h5><span id="emergency">Emergency</span> bathroom cleaning specialists</h5></div>
+          <nav>
+              <a href="#" id="hamburger"><img src="images/threelines.png"></a>
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="howItWorks.html">How It Works</a>
+              <a href="rates.html">Rates</a>
+          </nav>
       </div>
-      <nav>
-        <a href="#" id="hamburger"><img src="images/threelines.png"></a>
-        <div id="innernav">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="howItWorks.html">How It Works</a>
-          <a href="rates.html">Rates</a>
-        </div>
-      </nav>
   </header>
-<div>
+
+
+<section class="container">
 <p>"Jacky's" is a division of MLi Environmental LLC, a fully functioning hazardous waste entity expanding services in the Northeast region.  Our experience lies in  handling wastes of all variety, to include bio-hazardous, and working in Level B PPE if necessary.  Our workers are OSHA trained and attend refresher classes yearly.</p>
 <p>We have over 3000 safely completed jobs, all without incident.</p>
-</div>
-<footer>
-    &copy; 2016 Jacky-On-The-Spot! N.Y.C.      
-    <h4>"Happy being #3 in the #1 & #2 business"</h4>
-  </footer>
-  
-  <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
-  <script type="text/javascript" src="js/project.js"></script>
+</section>
 
+
+<footer>
+    <div class="container">
+        &copy; 2016 Jacky-On-The-Spot! N.Y.C.
+        <h4>"Happy being #3 in the #1 & #2 business"</h4>
+    </div>
+</footer>
+<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+<script type="text/javascript" src="js/project.js"></script>
 </body>
 </html>
-
-
