--- a/rates.html
+++ b/rates.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>How It Works</title>
-	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic" rel="stylesheet" type="text/css">
+  <head>
+    <title>Jacky-On-The-Spot</title>
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/project.css">
-</head>
-<body>
-    <header id="page-header">
-        <div class="container">
-            <h1><a href="index.html">JACKY-ON-THE-SPOT!</a></h1>
-            <h2>Emergency bathroom cleaning specialists</h2>
-            <div class="subH2"><h5><span id="emergency">Emergency</span> bathroom cleaning specialists</h5></div>
-            <nav>
-                <a href="#" id="hamburger"><img src="images/threelines.png"></a>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="howItWorks.html">How It Works</a>
-                <a href="rates.html">Rates</a>
-            </nav>
-        </div>
-    </header>
+  </head>
+  <body>
+  <header id="page-header">
+      <div class="container">
+          <h1><a href="index.html">JACKY-ON-THE-SPOT!</a></h1>
+          <h2>Emergency bathroom cleaning specialists</h2>
+          <div class="subH2"><h5><span id="emergency">Emergency</span> bathroom cleaning specialists</h5></div>
+          <nav>
+              <a href="#" id="hamburger"><img src="images/threelines.png"></a>
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="howItWorks.html">How It Works</a>
+              <a href="rates.html">Rates</a>
+          </nav>
+      </div>
+  </header>
 
     <section class="container">
         <p>$400 -Emergency Rates to attend an immediate bathroom treatment or cleaning.  "Jacky's" can handle many, but not all repairs. We use non-toxic cleaners, and dispose of all the waste we create.</p>
@@ -32,16 +32,16 @@
         <input id="footLength" placeholder="width in feet"> x
         <input id="footWidth" placeholder="length in feet"> =
         <button id="clickme">Calculate Square Horizontal Footage</button>
-        <h5>Your calculate Square Footage for horizonal bathroom surface is <span id="sqFootage">___</span> sq. ft.</h5>        
+        <h5>Your calculate Square Footage for horizonal bathroom surface is <span id="sqFootage">___</span> sq. ft.</h5>
     </section>
 
-  <footer>
-    &copy; 2016 Jacky-On-The-Spot! N.Y.C.
-    <h4>"Happy being #3 in the #1 & #2 business"</h4>
-  </footer>
-
-  <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
-  <script type="text/javascript" src="js/project.js"></script>
-
-</body>
-</html>
+    <footer>
+        <div class="container">
+            &copy; 2016 Jacky-On-The-Spot! N.Y.C.
+            <h4>"Happy being #3 in the #1 & #2 business"</h4>
+        </div>
+    </footer>
+    <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+    <script type="text/javascript" src="js/project.js"></script>
+  </body>
+  </html>
