--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
   <head>
     <title>Jacky-On-The-Spot</title>
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic" rel="stylesheet" type="text/css">
+    <link href="http://cdn.rawgit.com/noelboss/featherlight/1.5.0/release/featherlight.min.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/project.css">
   </head>
@@ -22,20 +23,20 @@
       </div>
   </header>
 
-  <div class="container">
+  <div class="container gallery">
     <div class="row">
-      <a class="thumbnail" data-featherlight="img_3499.jpg" href="img_3499.jpg"><img src="images/img_3499.jpg"></a>
-      <a class="thumbnail" data-featherlight="img_3650.jpg" href="img_3650.jpg"><img src="images/img_3650.jpg"></a>
-      <a class="thumbnail" data-featherlight="img_3677.jpg" href="img_3677.jpg"><img src="images/img_3677.jpg"></a>
-      <a class="thumbnail" data-featherlight="img_4014.jpg" href="img_4014.jpg"><img src="images/img_4014.jpg"></a>
-      <a class="thumbnail" data-featherlight="img_5804.jpg" href="img_5804.jpg"><img src="images/img_5804.jpg"></a>
+      <a class="thumbnail" data-featherlight="images/img_3499.jpg" href="images/img_3499.jpg"><img src="images/img_3499.jpg"></a>
+      <a class="thumbnail" data-featherlight="images/img_3650.jpg" href="images/img_3650.jpg"><img src="images/img_3650.jpg"></a>
+      <a class="thumbnail" data-featherlight="images/img_3677.jpg" href="images/img_3677.jpg"><img src="images/img_3677.jpg"></a>
+      <a class="thumbnail" data-featherlight="images/img_4014.jpg" href="images/img_4014.jpg"><img src="images/img_4014.jpg"></a>
+      <a class="thumbnail" data-featherlight="images/img_5804.jpg" href="images/img_5804.jpg"><img src="images/img_5804.jpg"></a>
     </div>
     <div class="row">
-      <a class="thumbnail" data-featherlight="img_5811.jpg" href="img_5811.jpg"><img src="images/img_5811.jpg"></a>
-      <a class="thumbnail" data-featherlight="img_7448.jpg" href="img_7448.jpg"><img src="images/img_7448.jpg"></a>
-      <a class="thumbnail" data-featherlight="img_7463.jpg" href="img_7463.jpg"><img src="images/img_7463.jpg"></a>
-      <a class="thumbnail" data-featherlight="img_7466.jpg" href="img_7466.jpg"><img src="images/img_7466.jpg"></a>
-      <a class="thumbnail" data-featherlight="img_7468.jpg" href="img_7468.jpg"><img src="images/img_7468.jpg"></a>
+      <a class="thumbnail" data-featherlight="images/img_5811.jpg" href="images/img_5811.jpg"><img src="images/img_5811.jpg"></a>
+      <a class="thumbnail" data-featherlight="images/img_7448.jpg" href="images/img_7448.jpg"><img src="images/img_7448.jpg"></a>
+      <a class="thumbnail" data-featherlight="images/img_7463.jpg" href="images/img_7463.jpg"><img src="images/img_7463.jpg"></a>
+      <a class="thumbnail" data-featherlight="images/img_7466.jpg" href="images/img_7466.jpg"><img src="images/img_7466.jpg"></a>
+      <a class="thumbnail" data-featherlight="images/img_7468.jpg" href="images/img_7468.jpg"><img src="images/img_7468.jpg"></a>
     </div>
 
   </div>
@@ -46,22 +47,9 @@
           <h4>"Happy being #3 in the #1 & #2 business"</h4>
       </div>
   </footer>
-  <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
-  <script type="text/javascript" src="js/project.js"></script>
+  <script src="js/jquery-3.1.0.min.js"></script>
+  <script src="js/featherlight-1.5.0/src/featherlight.js" charset="utf-8"></script>
+  <script src="js/featherlight-1.5.0/src/featherlight.gallery.js"></script>
+  <script src="js/project.js"></script>
 </body>
 </html>
-
-
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <title>LightBox</title>
-    <link href="http://cdn.rawgit.com/noelboss/featherlight/1.5.0/release/featherlight.min.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/gallery.css">
-  </head>
-  <body>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="http://cdn.rawgit.com/noelboss/featherlight/1.5.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
-  </body>
-</html> -->
