--- a/about.html
+++ b/about.html
@@ -18,13 +18,14 @@
               <a href="about.html">About</a>
               <a href="howItWorks.html">How It Works</a>
               <a href="rates.html">Rates</a>
+              <a href="gallery.html">Gallery</a>
           </nav>
       </div>
   </header>
 
 
 <section class="container">
-<p>"Jacky's" is a division of MLi Environmental LLC, a fully functioning hazardous waste entity expanding services in the Northeast region.  Our experience lies in  handling wastes of all variety, to include bio-hazardous, and working in Level B PPE if necessary.  Our workers are OSHA trained and attend refresher classes yearly.</p>
+<p>"Jacky's" is a division of MLi Environmental LLC, a fully functioning hazardous waste entity expanding services in the Northeast region.  Our experience lies in  handling wastes of all variety, to include bio-hazardous, and working in "Level B" PPE if necessary.  Our workers are OSHA trained and attend refresher classes yearly.</p>
 <p>We have over 3000 safely completed jobs, all without incident.</p>
 </section>
 
