--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,7 @@
               <a href="about.html">About</a>
               <a href="howItWorks.html">How It Works</a>
               <a href="rates.html">Rates</a>
+              <a href="gallery.html">Gallery</a>
           </nav>
       </div>
   </header>
