--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
               <a href="about.html">About</a>
               <a href="howItWorks.html">How It Works</a>
               <a href="rates.html">Rates</a>
+              <a href="https://goo.gl/forms/KpiZg9rUVpwgxIX33">Gallery</a>
           </nav>
       </div>
   </header>
@@ -53,8 +54,8 @@
           </div>
 
           <div class="callout rate">
-              <h3>Rate: $400</h3>
-              <p>This <span class="emergency-text">EMERGENCY</span> Rate applies in Manhattan only.  Includes full turn-key cleaning, and freshening up of your bathroom.  Money back guarantee if not satisfied.  We dispose of the waste we generate in accordance with all environmental laws and regulations</p>
+              <h3>Rate:</h3>
+              <p>$400 : This <span class="emergency-text">EMERGENCY</span> Manhattan only.  Includes full cleaning, and freshening up of your bathroom.  Money back guarantee if not satisfied.  We dispose of the waste we generate in accordance with all environmental laws and regulations.</p>
           </div>
       </div>
   </section>
