--- a/signup.html
+++ b/signup.html
@@ -18,6 +18,7 @@
               <a href="about.html">About</a>
               <a href="howItWorks.html">How It Works</a>
               <a href="rates.html">Rates</a>
+              <a href="gallery.html">Gallery</a>
           </nav>
       </div>
   </header>
