almost final product
going to Hart wrt pic resizing

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+<!--  https://goo.gl/forms/KpiZg9rUVpwgxIX33  -->
   <head>
     <title>Jacky-On-The-Spot</title>
+    <meta name="author" content="Jack Carpenter">
+    <meta name="description" content="A labor service cleaning bathrooms.">
+    <meta name="copyright" content="2016 Jack Carpenter”>
+    <meta name="keywords" content="bathrooms, cleaning, restrooms, customer,emergency">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/project.css">
@@ -18,17 +23,21 @@
               <a href="about.html">About</a>
               <a href="howItWorks.html">How It Works</a>
               <a href="rates.html">Rates</a>
-              <a href="https://goo.gl/forms/KpiZg9rUVpwgxIX33">Gallery</a>
+              <a href="gallery.html">Gallery</a>
           </nav>
       </div>
   </header>
   <p class="tagline">Because the <span id="only">only</span> pot a Barrista should be cleaning is a coffee pot....</p>
 
     <section class="banner">
+        <div class="skunk">
+            <iframe src="http://www.giphy.com/embed/l4Ki53WIZQqJI6phe" width="480" height="288" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/love-valentines-day-flirting-l4Ki53WIZQqJI6phe"></a></p>
+
+        </div>
         <div class="container">
             <div class="blurb">
                 <h2>Jacky, Please....</h2>
-                <a class="button" href="https://goo.gl/forms/KSrYPoeBm2Sz7tgs2" target="_blank">CLEAN MY BATHROOM NOW!</a>
+                <a class="button" href="https://goo.gl/forms/3hWc3knbGJNoRN8q1" target="_blank">CLEAN MY BATHROOM NOW!</a>
                 <h2>Your Company Policy:</h2>
                 <h4><ul> Provide clean public toilets</ul></h4>
                 <h2>Your Problem:</h2>
@@ -59,14 +68,13 @@
           </div>
       </div>
   </section>
-
-
   <div class="fixtoilet">
       <div class="container">
           <h4>Classes on a simple toilet repair:</h4>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/tLlgmWtrysI" frameborder="0" allowfullscreen></iframe>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/IR34TVD_ihI" frameborder="0" allowfullscreen></iframe>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/dST-bRCjVsw" frameborder="0" allowfullscreen></iframe>
+
           <!-- <input type="button" id="toiletRepairVideo" value="PLAY" src=""https://www.youtube.com/watch?v=tLlgmWtrysI&feature=youtu.be"> -->
           <audio id="audio" src="images/Toilet_Flushing-KevanGC-917782919.mp3"></audio>
       </div>
