--- a/rates.html
+++ b/rates.html
@@ -22,20 +22,16 @@
           </nav>
       </div>
   </header>
-
     <section class="container">
-        <p>$400 -Emergency Rates to attend an immediate bathroom treatment or cleaning.  "Jacky's" can handle many, but not all repairs. We use non-toxic cleaners, and dispose of all the waste we create.</p>
-
-        <p>For non-emergency rates, "Jacky's" estimates cleaning using the square footage of the room, location of business, time of day, and frequency of job.To estimate cleaning in a scheduled maintenance agreement, contact our office for an appointment and we will stop by for a look-see.</p>
-
         <h3>How big is bathroom to be cleaned?</h3>
-
         <input id="footLength" placeholder="width in feet"> x
         <input id="footWidth" placeholder="length in feet"> =
         <button id="clickme">Calculate Square Horizontal Footage</button>
         <h5>Your calculate Square Footage for horizonal bathroom surface is <span id="sqFootage">___</span> sq. ft.</h5>
+        <br>
+        <p>$400 -Emergency Rates to attend an immediate bathroom treatment or cleaning.  "Jacky's" can handle many, but not all repairs. We use non-toxic cleaners, and dispose of all thwaste we create.</p>
+        <p>For non-emergency rates, "Jacky's" estimates cleaning using the square footage of the room, location of business, time of day, and frequency of job.To estimate cleaning in a scheduled maintenance agreement, contact our office for an appointment and we will stop by for a look-see.</p>
     </section>
-
     <footer>
         <div class="container">
             &copy; 2016 Jacky-On-The-Spot! N.Y.C.
