--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Jacky-On-The-Spot</title>
     <meta name="author" content="Jack Carpenter">
     <meta name="description" content="A labor service cleaning bathrooms.">
-    <meta name="copyright" content="2016 Jack Carpenter”>
+    <meta name="copyright" content="2016 Jack Carpenter">
     <meta name="keywords" content="bathrooms, cleaning, restrooms, customer,emergency">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
